<resources>
    <string name="app_name">Mero Weather</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="preferences_location_label">Location</string>
    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="preferences_location_key" translatable="false">location</string>
    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="preferences_location_default" translatable="false">Kathmandu</string>

    <string name="preferences_temperature_label">Temperature units</string>
    <string name="preferences_temperature_key" translatabel="false">units</string>
    <string name="preferences_temperature_units_label_metric">Metric</string>
    <string name="preferences_temperature_units_label_imperial">Imperial</string>
    <string name="preferences_temperature_units_metric">metric</string>
    <string name="preferences_temperature_units_imperial">imperial</string>
    <string-array name="preferences_temperature_units_options">
        <item>@string/preferences_temperature_units_label_metric</item>
        <item>@string/preferences_temperature_units_label_imperial</item>
    </string-array>
    <string-array name="preferences_temperature_units_values">
        <item>@string/preferences_temperature_units_metric</item>
        <item>@string/preferences_temperature_units_imperial</item>
    </string-array>
</resources>
